<resources>
    <string name="app_name">PAMGuiaSeries</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="wandavision">WandaVision</string>
    <string name="tr_s_semanas_ap_s_os_eventos_de_vingadores_ultimato_2019_wanda_maximoff_e_vis_o_est_o_vivendo_uma_vida_suburbana_id_lica_na_cidade_de_westview_no_estado_de_new_jersey_tentando_esconder_suas_verdadeiras_identidades_medida_que_come_am_a_entrar_nas_novas_d_cadas_o_casal_suspeita_que_as_coisas_n_o_s_o_o_que_parecem">Três semanas após os eventos de Vingadores: Ultimato (2019), Wanda Maximoff e Visão estão vivendo uma vida suburbana idílica na cidade de Westview, no estado de New Jersey, tentando esconder suas verdadeiras identidades. À medida que começam a entrar nas novas décadas, o casal suspeita que as coisas não são o que parecem</string>
    <string name="sinopse">SINOPSE</string>
    <string name="temporadas_1">Temporadas: 1</string>
    <string name="logo">logo</string>
    <string name="the_flash">poster</string>
    <string name="anne">poster</string>
    <string name="wanda">poster</string>
    <string name="busca">busca</string>
    <string name="voltar">voltar</string>
    <string name="coment_rios">Comentários</string>
    <string name="wv2">wv2</string>
    <string name="n_o_a_toa_que_a_marvel_chamada_de_a_casa_das_ideias_wandavision_uma_homenagem_as_series_de_sitcom_feita_com_muita_criatividade_inova_o_e_uma_qualidade_de_filme_blockbuster">Não é a toa que a Marvel é chamada de A CASA DAS IDEIAS! WandaVision é uma homenagem as series de sitcom, feita com muita criatividade, inovação e uma qualidade de filme blockbuster.</string>
    <string name="disney">disney</string>
    <string name="youtube">youtube</string>
    <string name="ccxp_2021_sp">CCXP 2021 SP</string>
    <string name="endere_o_rodovia_dos_imigrantes_km_1_5">Endereço: Rodovia dos Imigrantes, Km 1,5.</string>
    <string name="data_de_2_a_5_de_dezembro">Data: de 2 a 5 de Dezembro</string>
    <string name="ingressos">ingressos</string>
    <string name="local">Local</string>
    <string name="agendar">agendar</string>
    <string name="eventos">Eventos</string>
    <string name="d23">D23 - Disney</string>
    <string name="d23_expo">d23_expo</string>
    <string name="local_anaheim_california">Local: Anaheim California</string>
    <string name="evangelion_poster">evangelion_poster</string>
    <string name="monster_poster">monster_poster</string>
    <string name="devilman_poster">devilman_poster</string>
    <string name="trailer">Trailer</string>
    <string name="assistir_s_rie">Assistir Série</string>
    <string name="abrir_trailer_youtube">abrir trailer youtube</string>
    <string name="assistir_no_disney">assistir no disney +</string>
    <string name="cadastro">Cadastro</string>
    <string name="digite_seu_nome">Digite seu nome</string>


    <string name="endereco_text">"Endereço: %1$s \n Latitude: %2$s \n Longitude: %3$s"</string>

    <string name="cancel_busca">Cancelar Busca</string>
    <string name="loading">Carregando…</string>
    <string name="digite_seu_email">Digite seu Email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="dr_kenzo_tenma_um_renomado_cirurgi_o_cerebral_jovem_descendente_de_japoneses_a_trabalhar_na_europa_altamente_elogiado_por_seus_pares_como_um_dos_grandes_mentes_jovens_que_ir_o_revolucionar_o_campo_ele_aben_oado_com_uma_bela_noiva_e_est_beira_de_uma_grande_promo_o_no_hospital_onde_trabalha">Dr. Kenzo Tenma é um renomado cirurgião cerebral jovem descendente de japoneses a trabalhar na Europa. Altamente elogiado por seus pares como um dos grandes mentes jovens que irão revolucionar o campo, ele é abençoado com uma bela noiva e está à beira de uma grande promoção no hospital onde trabalha.</string>
    <string name="bem_que_poderia_virar_uma_s_rie_em_live_action_da_netflix_ou_hbo">Bem que poderia virar uma série em live-action da Netflix ou HBO…</string>
    <string name="monster">Monster</string>
    <string name="email">Email:</string>
    <string name="nome_de_usu_rio">Nome de usuário:</string>
    <string name="sair_da_conta">Sair da conta</string>
    <string name="dude_lari_email_com">dude.lari@email.com</string>
    <string name="larissa_e_dude">Larissa e Dude</string>
    <string name="user_photo">user_photo</string>
    <string name="account_user">account_user</string>
    <string name="buscar_lojas">Buscar Lojas</string>
    <string name="lojas_pr_ximas_a_voc">Lojas Próximas a você!</string>
    <string name="no_address_found">noaddress</string>
    <string name="invalid_lat_long_used">invalidlatlongused</string>
    <string name="service_not_available">notavaiable</string>
    <string name="permissao_negada">Permissão negada! Autorize a aplicação</string>
    <string name="nossos_parceiros">Nossos Parceiros</string>
    <string name="lojas_pr_ximas">Lojas Próximas</string>
    <string name="localiza_o">Localização</string>
    <string name="meus_coment_rios">Meus comentários</string>
    <string name="nome_da_s_rie">Nome da série:</string>
    <string name="digite_o_nome_da_s_rie">Digite o nome da série</string>
    <string name="coment_rio">Comentário:</string>
    <string name="coloque_aqui_o_seu_coment_rio">Coloque aqui o seu comentário</string>
    <string name="salvar">Salvar Interno</string>
    <string name="salvar2">Salvar Externo</string>

    <string name="show_button_public">Visualizar</string>
    <string name="escolha_a_forma_de_armazenamento">Escolha a forma de armazenamento</string>
    <string name="mudar_para_coment_rios_pro">Mudar para comentários pro</string>
    <string name="visualizar_coment_rio">Visualizar comentário</string>
</resources>