<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".lojas">

    <TextView
        android:id="@+id/txtLoja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/lojas_pr_ximas"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/btnVoltar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtParceiros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/nossos_parceiros"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/btnVoltar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnVoltar_lojas"
        android:layout_width="52dp"
        android:layout_height="61dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/voltar"
        android:onClick="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/red" />

    <Button
        android:id="@+id/btn_buscarlocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/buscar_lojas"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infosLocal"
        android:layout_width="340dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:text="@string/endereco_text"
        android:textColor="#121212"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoja" />

</androidx.constraintlayout.widget.ConstraintLayout>