<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".cadastro">

    <TextView
        android:id="@+id/txtcadastro"
        android:layout_width="187dp"
        android:layout_height="63dp"
        android:layout_marginTop="172dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/cadastro"
        android:textColor="@color/amarelo"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:background="@color/red"
        android:onClick="abrirMain"
        android:text="@string/cadastrar"
        android:textSize="16sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="113dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toTopOf="@+id/txtcadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pipoca" />

</androidx.constraintlayout.widget.ConstraintLayout>